@@ -1,0 +1,4 @@
+package presentation.components
+
+class LoadingScreen {
+}
